Refactored mains to tests.